--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -72,7 +72,7 @@
 	<div class="video-info">
 
 		<div class="title">
-			<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="play"></a>
+			<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="info-play"></a>
 		</div>
 
 		<div class="modal-buttons">
@@ -80,7 +80,7 @@
 
 		<div class="cd-section">
 			<div class="cd-modal-action">
-				<a href="#0" class="btn" data-type="modal-trigger"></a>
+				<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
 				<span class="cd-modal-bg"></span>
 			</div> <!-- cd-modal-action -->
 
