--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -78,23 +78,71 @@
 		<div class="modal-buttons">
 			
 
-		<div class="cd-section">
-			<div class="cd-modal-action">
-				<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
-				<span class="cd-modal-bg"></span>
-			</div> <!-- cd-modal-action -->
+			<div class="cd-section">
+				<div class="cd-modal-action">
+					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
+					<span class="cd-modal-bg"></span>
+				</div> <!-- cd-modal-action -->
 
-			<div class="cd-modal">
-				<div class="cd-modal-content">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
-					</p>
+				<div class="cd-modal">
+					<div class="cd-modal-content">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
+						</p>
 
-				</div> <!-- cd-modal-content -->
+					</div> <!-- cd-modal-content -->
 
-			</div> <!-- cd-modal -->
+				</div> <!-- cd-modal -->
 
-			<a href="#0" class="cd-modal-close">Close</a>
+				<a href="#0" class="cd-modal-close">Close</a>
+
+			</div>
+
+			<div class="cd-section">
+				<div class="cd-modal-action">
+					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
+					<span class="cd-modal-bg"></span>
+				</div> <!-- cd-modal-action -->
+
+				<div class="cd-modal">
+					<div class="cd-modal-content">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat.
+						</p> 
+
+						<p>
+							Porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste!
+						</p>
+
+					</div> <!-- cd-modal-content -->
+
+				</div> <!-- cd-modal -->
+
+				<a href="#0" class="cd-modal-close">Close</a>
+
+			</div>
+
+			<div class="cd-section">
+				<div class="cd-modal-action">
+					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
+					<span class="cd-modal-bg"></span>
+				</div> <!-- cd-modal-action -->
+
+				<div class="cd-modal">
+					<div class="cd-modal-content">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat.
+						</p> 
+
+						<p>
+							Porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste!
+						</p>
+
+					</div> <!-- cd-modal-content -->
+
+				</div> <!-- cd-modal -->
+
+				<a href="#0" class="cd-modal-close">Close</a>
 
 			</div>
 
