Testing modal transition

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -87,7 +87,7 @@
 				<div class="cd-modal">
 					<div class="cd-modal-content">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam.
 						</p>
 
 					</div> <!-- cd-modal-content -->
@@ -110,9 +110,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat.
 						</p> 
 
-						<p>
-							Porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste!
-						</p>
+		
 
 					</div> <!-- cd-modal-content -->
 
@@ -128,15 +126,13 @@
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
-				<div class="cd-modal">
+				<div class="cd-modal no-csstransitions">
 					<div class="cd-modal-content">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat.
 						</p> 
 
-						<p>
-							Porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste!
-						</p>
+		
 
 					</div> <!-- cd-modal-content -->
 
