--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -86,8 +86,10 @@
 
 				<div class="cd-modal">
 					<div class="cd-modal-content">
+
+						<h1>Quick Fact #1</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus.
 						</p>
 
 					</div> <!-- cd-modal-content -->
@@ -106,11 +108,12 @@
 
 				<div class="cd-modal">
 					<div class="cd-modal-content">
+					
+						<h1>Quick Fact #2</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat.
-						</p> 
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus.
+						</p>
 
-		
 
 					</div> <!-- cd-modal-content -->
 
@@ -128,11 +131,11 @@
 
 				<div class="cd-modal no-csstransitions">
 					<div class="cd-modal-content">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat.
-						</p> 
 
-		
+						<h1>Quick Fact #3</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus.
+						</p>
 
 					</div> <!-- cd-modal-content -->
 
