Updating typeface and quick facts

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -80,16 +80,16 @@
 
 			<div class="cd-section">
 				<div class="cd-modal-action">
-					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
+					<a href="#0" class="btn" data-type="modal-trigger">Quick Fact</a>
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
 				<div class="cd-modal">
 					<div class="cd-modal-content">
 
-						<h1>Quick Fact #1</h1>
+						<h1>Being replaced</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus.
+							By the late 1870s steam engines had replaced water wheels as the primary source of power in most mills and machine shops. As the sole power source in a factory, a single steam engine provided the energy to run numerous machines at the same time. 
 						</p>
 
 					</div> <!-- cd-modal-content -->
@@ -102,16 +102,16 @@
 
 			<div class="cd-section">
 				<div class="cd-modal-action">
-					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
+					<a href="#0" class="btn" data-type="modal-trigger">Quick Fact</a>
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
 				<div class="cd-modal">
 					<div class="cd-modal-content">
 					
-						<h1>Quick Fact #2</h1>
+						<h1>Power by rotation</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus.
+							The power from a steam engine transferred to various machines throughout the shop by rotating a large counter wheel fitted with a leather belt, called a line shaft. The line shaft turned a metal rod or axle located above the factory floor. This initial connection was only the first in a series of such connections that powered smaller line shafts and machines throughout the Factory.
 						</p>
 
 
@@ -125,16 +125,16 @@
 
 			<div class="cd-section no-csstransitions">
 				<div class="cd-modal-action">
-					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
+					<a href="#0" class="btn" data-type="modal-trigger">Quick Fact</a>
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
 				<div class="cd-modal no-csstransitions">
 					<div class="cd-modal-content">
 
-						<h1>Quick Fact #3</h1>
+						<h1>Moving to electric</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus.
+							In today’s factories the canopy of line shafts that powered multiple machines has disappeared. Modern steam powered generators, located far from the shops themselves, provide energy in the form of electric current to run motors at each machine. 
 						</p>
 
 					</div> <!-- cd-modal-content -->
