Adding images and updating css

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -87,7 +87,7 @@
 				<div class="cd-modal">
 					<div class="cd-modal-content">
 
-						<h1>Being replaced</h1>
+						<h1>Replacing water wheels</h1>
 						<p>
 							By the late 1870s steam engines had replaced water wheels as the primary source of power in most mills and machine shops. As the sole power source in a factory, a single steam engine provided the energy to run numerous machines at the same time. 
 						</p>
