Commenting out scripts

--- a/LineShaftKiosk/framed.html
+++ b/LineShaftKiosk/framed.html
@@ -156,15 +156,14 @@
 
 			
 
-		<!-- TODO: Select version of jquery and link to CDN -->
+		<!--
 		<script src="assets/js/modernizr.min.js"></script>
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
 		<script src="assets/js/velocity.min.js"></script>
 		<script src="assets/js/touch-emulator.min.js"></script>
 		<script src="assets/js/fastclick.min.js"></script>
 		<script src="assets/js/modal.min.js"></script>
-		<!-- <script src="assets/js/quo.standalone.min.js"></script> -->
-		<script src="assets/js/script.min.js"></script>
+		<script src="assets/js/script.min.js"></script> -->
 	</body>
 
 </html>
