--- a/LineShaftKiosk/framed.html
+++ b/LineShaftKiosk/framed.html
@@ -154,16 +154,13 @@
 
 		</div>	
 
-			
-
-		<!--
 		<script src="assets/js/modernizr.min.js"></script>
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
 		<script src="assets/js/velocity.min.js"></script>
 		<script src="assets/js/touch-emulator.min.js"></script>
 		<script src="assets/js/fastclick.min.js"></script>
 		<script src="assets/js/modal.min.js"></script>
-		<script src="assets/js/script.min.js"></script> -->
+		<script src="assets/js/script.min.js"></script>
 	</body>
 
 </html>
