--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+
+	<title>The Works Kiosk V.03</title>
+	<link href="assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
+				
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
