--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -74,9 +74,10 @@
 
 		<div class="video-preview bg">
 
-			<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
+			<form accept-charset="utf8" enctype="application/xwwww-formurlencoded" method="get" action="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" name="play" class="play">
+				<input name="cmd" value="formdata" type="hidden" class="play">
 				<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
-			</a>
+			</form>
 
 		</div>
 
