Updating form to have button

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -75,8 +75,9 @@
 		<div class="video-preview bg">
 
 			<form accept-charset="utf8" enctype="application/xwwww-formurlencoded" method="get" action="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" name="play" class="play">
-				<input name="cmd" value="formdata" type="hidden" class="play">
-				<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
+				<button name="cmd" value="formdata" type="hidden" class="play">
+					<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
+				</button>
 			</form>
 
 		</div>
@@ -172,7 +173,7 @@
 		<iframe src="framed.html" id="iframe">
 		</iframe>
 
-	</div> --><
+	</div> -->
 	
 	<script src="assets/js/modernizr.min.js"></script>
 	<script src="assets/js/jquery.1.11.3.min.js"></script>
