Updating form name

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -75,7 +75,7 @@
 		<div class="video-preview bg">
 
 			<form accept-charset="utf8" enctype="application/xwwww-formurlencoded" method="get" action="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" name="play" class="play">
-				<button name="cmd" value="formdata" type="hidden" class="play">
+				<button name="play" value="formdata" type="hidden" class="play">
 					<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
 				</button>
 			</form>
