--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -74,11 +74,14 @@
 
 		<div class="video-preview bg">
 
-			<form accept-charset="utf8" enctype="application/xwwww-formurlencoded" method="get" action="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" name="cmd" class="play">
+			<!-- <form accept-charset="utf8" enctype="application/xwwww-formurlencoded" method="get" action="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" name="cmd" class="play">
 				<button name="cmd" value="formdata" type="hidden" class="play">
 					<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
 				</button>
-			</form>
+			</form> -->
+
+			<iframe src="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" width="50px" height="50px"
+			frameborder="0" class="play"></iframe>
 
 		</div>
 
