Adding new iframe solution

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -80,7 +80,7 @@
 				</button>
 			</form> -->
 
-			<iframe src="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" width="50px" height="50px"
+			<iframe src="framed.html" width="50px" height="50px"
 			frameborder="0" class="play"></iframe>
 
 		</div>
