--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -80,7 +80,7 @@
 				</button>
 			</form> -->
 
-			<iframe src="framed.html" width="50px" height="50px"
+			<iframe src="../framed.html" width="50px" height="50px"
 			frameborder="0" class="play"></iframe>
 
 		</div>
