--- a/LineShaftKiosk/framed.html
+++ b/LineShaftKiosk/framed.html
@@ -3,7 +3,7 @@
 
 	<body>
 
-		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
+		<a href="http://www.lineshaftkiosk.com/file://homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
 		PLAY PLAY
 		</a>
 
