--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -80,8 +80,9 @@
 				</button>
 			</form> -->
 
-			<iframe src="../framed.html" width="50px" height="50px"
-			frameborder="0" class="play"></iframe>
+		<a href="http://www.lineshaftkiosk.com/file://homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
+		PLAY PLAY
+		</a>
 
 		</div>
 
