--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -80,7 +80,7 @@
 				</button>
 			</form> -->
 
-		<a href="http://www.lineshaftkiosk.com/file://homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
+		<a href="http://www.lineshaftkiosk.com/homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
 		PLAY PLAY
 		</a>
 
