--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -39,7 +39,7 @@
 			<ul class="video-controls">
 
 		        <li>
-		        	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startCCOMX.sh%20&">
+		        	<a href="http://localhost:80/homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startCCOMX.sh%20&">
 		        		<img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/>
 		        	</a>
 		        </li>
