--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -39,7 +39,7 @@
 			<ul class="video-controls">
 
 		        <li>
-		        	<a href="http://localhost:80/homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startCCOMX.sh%20&">
+		        	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startCCOMX.sh%20&">
 		        		<img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/>
 		        	</a>
 		        </li>
@@ -80,9 +80,8 @@
 				</button>
 			</form> -->
 
-		<a href="http://www.lineshaftkiosk.com/homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaftTest/startOMX.sh%20&" class="play">
-		PLAY PLAY
-		</a>
+			<iframe src="../framed.html" width="50px" height="50px"
+			frameborder="0" class="play"></iframe>
 
 		</div>
 
